--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -7,6 +7,21 @@
     </div>
 </div>
 
+<div id="MultiplayerLoginBody" style="">
+    <div id="LoginContainer">
+        <div class="col-2">
+          <img src="local://local/ui/modules/multiplayer/beammp.png" alt="BeamMP Logo">
+        </div>
+        <div class="col-2">
+          <h2 class="text-white">Login with your BeamMP account.</h2>
+          <input type="text" id="loginUsername" placeholder="Username / Email"/>
+      		<input type="password" id="loginPassword" placeholder="Password"/>
+      		<md-button id="" class="button" ng-click="multiplayer.login()">Login</md-button>
+          <md-button id="" class="button" ng-click="multiplayer.guestLogin()">Play as Guest</md-button>
+        </div>
+    </div>
+</div>
+
 <div id="addCustomFav" style="display: none;">
 
 	<md-list-item layout class="md-padding" style="padding-top: 15px; padding-bottom: 0;">
