Guest + Normal Login

--- a/ui/modules/multiplayer/multiplayer.html
+++ b/ui/modules/multiplayer/multiplayer.html
@@ -8,7 +8,7 @@
 </div>
 
 <div id="MultiplayerLoginBody" style="">
-    <div id="LoginContainer">
+    <div id="LoginContainer" class="GuestLoginContainer">
         <div class="col-2">
           <img src="local://local/ui/modules/multiplayer/beammp.png" alt="BeamMP Logo">
         </div>
@@ -17,7 +17,18 @@
           <input type="text" id="loginUsername" placeholder="Username / Email"/>
       		<input type="password" id="loginPassword" placeholder="Password"/>
       		<md-button id="" class="button" ng-click="multiplayer.login()">Login</md-button>
-          <md-button id="" class="button" ng-click="multiplayer.guestLogin()">Play as Guest</md-button>
+          <md-button id="" class="button" ng-click="multiplayer.switchToGuest()">Play as Guest</md-button>
+        </div>
+    </div>
+    <div id="GuestContainer" class="GuestLoginContainer" style="display: none;">
+        <div class="col-2">
+          <img src="local://local/ui/modules/multiplayer/beammp.png" alt="BeamMP Logo">
+        </div>
+        <div class="col-2">
+          <h2 class="text-white">Please enter a Username to play with.</h2>
+          <input type="text" id="guestUsername" placeholder="Username"/>
+      		<md-button id="" class="button" ng-click="multiplayer.guestLogin()">Play</md-button>
+          <md-button id="" class="button" ng-click="multiplayer.switchToLogin()">Login</md-button>
         </div>
     </div>
 </div>
