--- a/ui/modules/credits/credits.html
+++ b/ui/modules/credits/credits.html
@@ -45,6 +45,7 @@
 		    <span ng-if="::member.aka" style="text-transform: none"> "{{ ::member.aka }}" </span>
           {{ ::member.last }}
 
+          <span ng-if="::member.title" class="title">.{{ ::member.title }}</span>
         </name>
       </div>
     </div>
