favs to json, nick prefixes, UI stuff

--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -8,7 +8,6 @@
     <!-- checks if the ui is loaded in an external browser and sets up communication via websocket to the game if that's the case -->
     <script src="entrypoints/main/setupCommunication.js"></script>
 
-    <!--<script src="modules/multiplayer/js/jquery.min.js"></script> <!-- HERE HERE HERE HERE HERE HERE HERE HERE HERE -->
 
     <!-- 3rd party includes -->
     <script src="lib/ext/angular.min.js"></script>
@@ -27,6 +26,10 @@
     <script src="lib/ext/jk-rating-stars.min.js"></script>
     <script src="lib/ext/chartist.min.js"></script>
     <script src="lib/ext/hu.js"></script>
+
+    <!--3rd party test -->
+    <script src="lib/ext/ng-FitText.js"></script>
+
 
     <link type="text/css" rel="stylesheet" href="lib/ext/angular-material.min.css">
     <link type="text/css" rel="stylesheet" href="lib/ext/angular-toastr.min.css">
@@ -60,7 +63,7 @@
     <script src="modules/options/options.js"></script>
     <script src="modules/debug/debug.js"></script>
     <script src="modules/credits/credits.js"></script>
-	  <script src="modules/multiplayer/multiplayer.js"></script> <!-- HERE HERE HERE HERE HERE HERE HERE HERE HERE -->
+	<script src="modules/multiplayer/multiplayer.js"></script>
     <script src="modules/startScreen/startScreen.js"></script>
     <script src="modules/vehicleconfig/vehicleconfig.js"></script>
     <script src="modules/loading/loading.js"></script>
