--- a/ui/modules/credits/credits.html
+++ b/ui/modules/credits/credits.html
@@ -13,12 +13,15 @@
       <div>
         <name>
 		    <span>Titch2000</span>
+			<span style="color:#0059ff">.Main BeamMP dev</span>
         </name>
         <name>
   		   <span>Anonymous275</span>
+			<span style="color:#0059ff">.Main BeamMP dev</span>
         </name>
         <name>
     		<span>Jojos38</span>
+			<span style="color:#0059ff">.Main BeamMP dev</span>
         </name>
       </div>
     </div>
@@ -28,9 +31,11 @@
       <div>
         <name>
 		    <span>stefan750</span>
+			<span style="color:#0059ff">.velocityyyyyyy</span>
         </name>
         <name>
   		   <span>deer boi</span>
+			<span style="color:#0059ff">.meow</span>
         </name>
       </div>
     </div>
