--- a/ui/modules/help/faq.html
+++ b/ui/modules/help/faq.html
@@ -33,17 +33,17 @@
 </style>
 
 <section class="overviewContainer faq">
-  <md-card class="card" style="height: 563px"> <!-- Same height as the two cards next to it -->
+  <md-card class="card">
     <div class="md-padding md-title" translate="ui.faq.getHelp.q"></div>
     <md-divider></md-divider>
     <div class="md-padding" bng-translate="ui.faq.getHelp.a"></div>
     <div class="md-padding">
       If you are experiencing problems with the multiplayer mod, you can get in touch with us in these ways
       <br><br>
-      <a href="http-external://forum.beamng-mp.com/">BeamMP Forum</a>
-      <a href="http-external://discord.gg/beamngmp/">Discord Support</a>
+      <a href="http-external://forum.beamng-mp.com/" onclick="openForumLink()">BeamMP Forum</a>
+      <a href="http-external://discord.gg/beammp/" onclick="openExternalLink('https://discord.gg/beammp')">Discord Support</a>
       <br>
-      We will try to get back to you as soon as possible, but please allow upto 48 hours
+      We will try to get back to you as soon as possible, but please allow up to 48 hours
     </div>
   </md-card>
 
