--- a/ui/modules/multiplayer/servers.partial.html
+++ b/ui/modules/multiplayer/servers.partial.html
@@ -14,31 +14,43 @@
 			<md-button id="refresh-button" class="button" ng-class="" ng-click="multiplayer.refreshList()">{{:: 'ui.multiplayer.refresh' | translate}}</md-button>
 
 			<md-checkbox ng-model="multiplayermenu.check_isEmpty" ng-change="multiplayermenu.displayServers();">
-			<md-tooltip md-direction="right">
-			Only show empty servers
-			</md-tooltip md-no-ink>
-			Empty only
+				<md-tooltip md-direction="right">
+					{{:: 'ui.multiplayer.emptyOnlyTooltip' | translate}}
+				</md-tooltip md-no-ink>
+				{{:: 'ui.multiplayer.emptyOnly' | translate}}
 			</md-checkbox>
 
 			<md-checkbox ng-model="multiplayermenu.check_isNotEmpty" ng-change="multiplayermenu.displayServers();">
-			<md-tooltip md-direction="right">
-			Only show not empty servers
-			</md-tooltip md-no-ink>
-			Not empty
+				<md-tooltip md-direction="right">
+					{{:: 'ui.multiplayer.notEmptyTooltip' | translate}}
+				</md-tooltip md-no-ink>
+				{{:: 'ui.multiplayer.notEmpty' | translate}}
 			</md-checkbox>
 
 			<md-checkbox ng-model="multiplayermenu.check_isNotFull" ng-change="multiplayermenu.displayServers();">
-			<md-tooltip md-direction="right">
-			Only show not full servers
-			</md-tooltip md-no-ink>
-			Not full
+				<md-tooltip md-direction="right">
+					{{:: 'ui.multiplayer.notFullTooltip' | translate}}
+				</md-tooltip md-no-ink>
+				{{:: 'ui.multiplayer.notFull' | translate}}
 			</md-checkbox>
 
+
+			<md-select ng-model="multiplayermenu.select_map" placeholder="All" class="md-no-underline dropdown" ng-change="multiplayermenu.displayServers();">
+				<md-tooltip md-direction="right">
+					{{:: 'ui.multiplayer.mapFilterTooltip' | translate}}
+				</md-tooltip md-no-ink>
+
+				<md-option md-no-ink ng-repeat="map in multiplayermenu.availableMaps" ng-value="multiplayermenu.availableMaps[$index]">
+					{{ map }}
+				</md-option>
+			</md-select>
+
+
 			<md-checkbox ng-model="multiplayermenu.check_modSlider" ng-change="multiplayermenu.displayServers();">
-			<md-tooltip md-direction="right">
-			Enable mod size limiter
-			</md-tooltip md-no-ink>
-			Mod size slider
+				<md-tooltip md-direction="right">
+					{{:: 'ui.multiplayer.modSliderTooltip' | translate}}
+				</md-tooltip md-no-ink>
+				{{:: 'ui.multiplayer.modSlider' | translate}}
 			</md-checkbox>
 
 			<md-slider flex ng-if="multiplayermenu.check_modSlider"
