--- a/ui/modules/credits/credits.html
+++ b/ui/modules/credits/credits.html
@@ -13,15 +13,15 @@
       <div>
         <name>
 		    <span>Titch2000</span>
-			<span style="color:#0059ff">.Main BeamMP dev</span>
+			<span style="color:#0059ff">.Lead BeamMP developer</span>
         </name>
         <name>
   		   <span>Anonymous275</span>
-			<span style="color:#0059ff">.Main BeamMP dev</span>
+			<span style="color:#0059ff">.Lead BeamMP developer</span>
         </name>
         <name>
     		<span>Jojos38</span>
-			<span style="color:#0059ff">.Main BeamMP dev</span>
+			<span style="color:#0059ff">.Lead BeamMP developer</span>
         </name>
       </div>
     </div>
@@ -31,11 +31,11 @@
       <div>
         <name>
 		    <span>stefan750</span>
-			<span style="color:#0059ff">.velocityyyyyyy</span>
+			<span style="color:#0059ff">.pushing cars around</span>
         </name>
         <name>
   		   <span>deer boi</span>
-			<span style="color:#0059ff">.meow</span>
+			<span style="color:#0059ff">.Lead deer developer</span>
         </name>
       </div>
     </div>
