--- a/ui/modules/apps/BeamMP-Chat/app.html
+++ b/ui/modules/apps/BeamMP-Chat/app.html
@@ -1,6 +1,4 @@
-<div  ng-controller="Chat" id="Chat" class="bngApp multiplayerChat"
-	ng-style="{'width': '100%', 'height': '100%', 'background-color': 'transparent'}"
-	ng-init="init()">
+<div  ng-controller="Chat" id="Chat" class="bngApp multiplayerChat" ng-style="{'width': '100%', 'height': '100%', 'background-color': 'transparent'}" ng-init="init()">
 	<style>
 		.error {
 			color: red;
