--- a/ui/modules/apps/BeamMP-Session/app.html
+++ b/ui/modules/apps/BeamMP-Session/app.html
@@ -1,37 +1,65 @@
-<div ng-controller="Session" id="Session" class="bngApp multiplayersession" ng-init="init()" ng-style="background-color: rgba(0, 0, 0, 0.5)">
-	<div class="outerDiv">
-		<div class="col col-wide">
-			<span id="Session-Status"></span>
-		</div>
-		<div class="col col-right">
-			<span>Players: <span id="Session-PlayerCount">0/10</span></span>
-			<span>Ping: <span id="Session-Ping">?</span></span>
-			<button type="button" name="button" class="QuitButton" ng-click="mpquit()">Quit</button>
-		</div>
-	</div>
+<div ng-controller="Session" id="Session" class="bngApp multiplayersession" ng-init="init()" ng-style="{'width': '100%', 'height': '100%', 'background-color': 'transparent'}">
 	<style>
 	div#Session {
 		display: -webkit-box;
-		height: 31px;
-		padding: 2px;
+		height: 30px;
 	}
-	button.QuitButton {
+	#quit-button {
 		width: 55px;
+		height: 100%;
 	}
-	.col-wide {
+	.outerDiv {
+		display: flex;
+		width: 100%;
+		justify-content: center;
+		//align-items: center;
+		flex-flow: row nowrap;
+	}
+	.block {
+		min-height: 100%;
+		border: 2px solid rgba(175, 175, 175, 0.45);
+		background-color: rgba(0, 0, 0, 0.25);
+		display: flex;
+		align-items: center;
+		padding: 0px 10px 0px 10px;
+		white-space: nowrap;
 		overflow: hidden;
-		white-space: nowrap;
-		flex:1 1;
-		margin: 2px;
+		min-width: auto;
 	}
-	.col-right {
-		white-space: nowrap;
-		flex:0 0;
+	#server-name-block {
+		flex: 1 auto 0;
 	}
-	.outerDiv{
-		display:flex;
-		width:100%;
-		align-items:center;
+	.others-block {
+		flex: 0 0 auto;
+	}
+	#button-block: {
+		padding: 0px;
+		margin: 0px;
+	}
+	.buttons {
+		color: #DDDDDD;
+		border: 2px solid rgba(175, 175, 175, 0.45);
+		transition: 0.20s;
+		background-color: rgba(0, 0, 0, 0.45);
+		height: 100%;
+	}
+	.buttons:hover {
+		background-color:rgba(0, 0, 0, 0.65);
+		color: #FFFFFF;
 	}
 	</style>
+	<div class="outerDiv">
+		<div class="block" id="server-name-block">
+			<span id="Session-Status"></span>
+		</div>
+		<div class="block others-block">
+			<span>Players: <span id="Session-PlayerCount">0/10</span></span>
+		</div>
+		<div class="block others-block">
+			<span>Ping: <span id="Session-Ping">?</span></span>
+		</div>
+		<div>
+			<button type="button" id="quit-button" name="button" class="buttons" ng-click="mpquit()">Quit</button>
+		</div>
+	</div>
 </div>
