--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -3,7 +3,7 @@
 		.popout-list {
 			display: none;
 			margin-right: 25px;
-			background-color: rgba(0, 0, 0, 0.45);
+			background-color: rgba(0, 0, 0, 0.25);
 			width:100%;
 			resize:both;
 			border: 2px solid rgba(175, 175, 175, 0.45);
@@ -28,7 +28,7 @@
 			padding-bottom: -4px;
 		}
 		#players-table td {
-			padding: 0;
+			padding: 0 0 0 5px;
 		}
 		#players-table th {
 			border-bottom: 2px solid rgba(175, 175, 175, 0.45);
