--- a/ui/modules/apps/BeamMP-PlayerList/app.html
+++ b/ui/modules/apps/BeamMP-PlayerList/app.html
@@ -1,4 +1,4 @@
-<div ng-controller="PlayerList" id="PlayerList" class="multiplayerPlayerList" ng-init="init()" ng-style="background-color: rgba(0, 0, 0, 0)">
+<div ng-controller="PlayerList" id="PlayerList" class="multiplayerPlayerList" ng-init="init()" ng-style="{'background-color': 'rgba(0, 0, 0, 0)'}">
 	<style>
 		.popout-list {
 			display: none;
