--- a/ui/entrypoints/main/index.html
+++ b/ui/entrypoints/main/index.html
@@ -63,7 +63,7 @@
     <script src="modules/options/options.js"></script>
     <script src="modules/debug/debug.js"></script>
     <script src="modules/credits/credits.js"></script>
-	  <script src="modules/multiplayer/multiplayer.js"></script>
+	<script src="modules/multiplayer/multiplayer.js"></script> <!-- --------------------------------- BEAMMP --------------------------------- -->
     <script src="modules/startScreen/startScreen.js"></script>
     <script src="modules/vehicleconfig/vehicleconfig.js"></script>
     <script src="modules/loading/loading.js"></script>
@@ -112,10 +112,10 @@
     <!-- <script src="modules/modmanager2/modmanager2.js"></script> -->
 
     <!-- Mod Wizard -->
-    <!-- <script src="modules/modwizard/modwizard.js"></script>
+    <script src="modules/modwizard/modwizard.js"></script>
     <script src="modules/modwizard/skinWizard/skinwizard.js"></script>
     <script src="modules/modwizard/vehicleWizard/vehiclewizard.js"></script>
-    <script src="modules/modwizard/terrainWizard/terrainwizard.js"></script> -->
+    <script src="modules/modwizard/terrainWizard/terrainwizard.js"></script>
 
     <link rel="stylesheet" type="text/css" href="modules/ui-components/bng-components.css">
 
